--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -384,6 +384,9 @@
 
   <!-- Next Steps -->
   <h2>Next Steps</h2>
+
+  <gina-form></gina-form>
+  
   <p>What do you want to do next with your app?</p>
 
   <input type="hidden" #selection>
