--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,34 @@
-<h1>Pagina principal</h1>
-<p>Conteúdo da página principal</p>
-<router-outlet></router-outlet>
+<app-toolbar></app-toolbar>
+<mat-sidenav-container>
+  <mat-sidenav #sidenav mode="side" class="mat-elevation-z4" opened="true">
+      <img class="avatar mat-elevation-z8" src="https://media.istockphoto.com/photos/blue-male-avatar-blank-shape-in-white-hole-3d-illustration-picture-id1283675387?k=6&m=1283675387&s=612x612&w=0&h=q6k_DK5Ac3dM4rKibpstHGZ69-NMUiRSQvt8_jMrYvs=">
+      <h4 class="nome">Nome usuário</h4>
+      <p class="designation">Profissão</p>
+    <mat-divider>
+    </mat-divider>
+    <mat-nav-list>
+      <mat-list-item>
+        <mat-icon matListIcon>account_circle</mat-icon>
+        <h3 matLine routerLink="/login">Login</h3>
+      </mat-list-item>
+    </mat-nav-list>
+    <mat-divider>
+    </mat-divider>
+    <mat-nav-list>
+      <mat-list-item>
+        <mat-icon matListIcon>home</mat-icon>
+        <h3 matLine routerLink="/home">Home</h3>
+      </mat-list-item>
+      <mat-list-item>
+        <mat-icon matListIcon>flag</mat-icon>
+        <h3 matLine routerLink="/objetivo">Objetivo</h3>
+      </mat-list-item>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
+
+
+
